crates/pane-tui/src/ui/snapshots/pane__ui__tests_dialog__confirm_small_terminal.snap
---
source: crates/pane-tui/src/ui/tests_dialog.rs
expression: output
---
╭──────────────────────────────────────────────────────────╮
│  1                                                    +  │
╰──────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────╮
│  zsh                                                  +  │
│                                                          │
│                                                          │
│                ╭ Confirm ──────────────╮                 │
│                │   Are you sure?       │                 │
│                │                       │                 │
│                │    Cancel    Confirm  │                 │
│                ╰───────────────────────╯                 │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
╰──────────────────────────────────────────────────────────╯
  Enter/y  confirm ·  Esc/n  cancel
