crates/pane-tui/src/ui/snapshots/pane__ui__tests_dialog__new_workspace_dir_stage.snap
---
source: crates/pane-tui/src/ui/tests_dialog.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  1                                                                                                                +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  zsh                                                                                                              +  │
│ ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────── │
│                                                                                                                      │
│                               ╭ new workspace ───────────────────────────────────────╮                               │
│                               │ ← /tmp →                                             │                               │
│                               │──────────────────────────────────────────────────────│                               │
│                               │  (empty)                                             │                               │
│                               │                                                      │                               │
│                               │                                                      │                               │
│                               │                                                      │                               │
│                               │                                                      │                               │
│                               │                                                      │                               │
│                               │                                                      │                               │
│                               │                                                      │                               │
│                               │                                                      │                               │
│                               │                                                      │                               │
│                               │                                                      │                               │
│                               │                                                      │                               │
│                               │                                                      │                               │
│                               │                                                      │                               │
│                               │                                                      │                               │
│                               │                                                      │                               │
│                               │──────────────────────────────────────────────────────│                               │
│                               │  enter select  tab/→ open  esc cancel                │                               │
│                               ╰──────────────────────────────────────────────────────╯                               │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  Enter  select ·  Tab  complete ·  →  open ·  Esc  cancel
