crates/pane-tui/src/ui/snapshots/pane__ui__tests_dialog__new_workspace_dir_stage_zoxide.snap
---
source: crates/pane-tui/src/ui/tests_dialog.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  1                                                                                                                +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  zsh                                                                                                              +  │
│ ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────── │
│                                                                                                                      │
│                               ╭ new workspace ───────────────────────────────────────╮                               │
│                               │                ( Search ) ( Browse )                 │                               │
│                               │──────────────────────────────────────────────────────│                               │
│                               │ > pa_                                                │                               │
│                               │──────────────────────────────────────────────────────│                               │
│                               │  ~/Developer/pane                                    │                               │
│                               │  ~/Developer/ellie                                   │                               │
│                               │  ~/Developer/canaveral                               │                               │
│                               │                                                      │                               │
│                               │                                                      │                               │
│                               │                                                      │                               │
│                               │                                                      │                               │
│                               │                                                      │                               │
│                               │                                                      │                               │
│                               │                                                      │                               │
│                               │                                                      │                               │
│                               │                                                      │                               │
│                               │                                                      │                               │
│                               │                                                      │                               │
│                               │──────────────────────────────────────────────────────│                               │
│                               │  enter select  tab browse  esc cancel                │                               │
│                               ╰──────────────────────────────────────────────────────╯                               │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
 ( Enter ) select · ( Tab ) complete · ( → ) open · ( Esc ) cancel
