crates/pane-tui/src/ui/snapshots/pane__ui__tests_dialog__new_workspace_name_stage.snap
---
source: crates/pane-tui/src/ui/tests_dialog.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  1                                                                                                                +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  zsh                                                                                                                +
 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                      ╭ name workspace ──────────────────────────╮
                                      │  /tmp                                    │
                                      │                                          │
                                      │  name                                    │
                                      │  my-project_                             │
                                      │                                          │
                                      │                                          │
                                      │  enter create  esc back                  │
                                      ╰──────────────────────────────────────────╯
  Enter  create ·  Esc  back
