crates/pane-tui/src/ui/snapshots/pane__ui__tests_dialog__rename_window_empty.snap
---
source: crates/pane-tui/src/ui/tests_dialog.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  1                                                                                                                +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  zsh                                                                                                                +
 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                             ╭ rename window ─────────────╮
                                             │  _                         │
                                             ╰────────────────────────────╯
  Enter  confirm ·  Esc  cancel
