crates/pane-tui/src/ui/snapshots/pane__ui__tests_dialog__rename_window_with_text.snap
---
source: crates/pane-tui/src/ui/tests_dialog.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  1                                                                                                                +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  zsh                                                                                                                +
 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                             ╭ rename window ─────────────╮
                                             │  my-server_                │
                                             ╰────────────────────────────╯
  Enter  confirm ·  Esc  cancel
